# tx_di

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  di优化指南2.md  temp.md  test_output.txt
common/crates/tx_common/: Cargo.toml
common/crates/tx_common/src/: api_r.rs  id.rs  lib.rs  page.rs
common/tx_error/: Cargo.toml
common/tx_error/src/: anyhow_support.rs  axum_support.rs  code.rs  di_err.rs  error.rs  lib.rs  macros.rs
common/tx_gb28181/: Cargo.toml
common/tx_gb28181/src/: cmd_type.rs  device.rs  enums.rs  event.rs  lib.rs  ps.rs  rtcp.rs  sdp.rs  sip.rs  utils.rs  version.rs  xml.rs
di-core/: Cargo.toml
di-core/src/: lib.rs
di-core/src/di/: mod.rs  scopes.rs
di-core/src/di/comp/: comp_ref.rs  mod.rs
di-example/: Cargo.toml
di-example/src/: lib.rs  main.rs
di-macros/: Cargo.toml
di-macros/src/: lib.rs
examples/admin_server/: Cargo.toml
examples/admin_server/config/: config.toml
examples/admin_server/src/: admin_plugin.rs  lib.rs  main.rs
examples/admin_server/src/application/: mod.rs
examples/admin_server/src/domain/: api_log.rs  config.rs  data_permission.rs  dept.rs  dict.rs  error.rs  file.rs  login_log.rs  mail.rs  menu.rs  mod.rs  notice.rs  notify.rs  oauth2.rs  operate_log.rs  permission.rs  post.rs  role.rs  role_menu.rs  seed_data.rs  tenant.rs  user.rs  user_post.rs  user_role.rs
examples/admin_server/src/infrastructure/: mod.rs
examples/admin_server/src/interfaces/: mod.rs
examples/dfbja7_transformer/: .env.example  Cargo.toml  Cross.toml  MIGRATION_SUMMARY.md  README.md
examples/dfbja7_transformer/.cargo/: config.toml
examples/dfbja7_transformer/config/: config.toml
examples/dfbja7_transformer/examples/: test.md  test_client.rs
examples/dfbja7_transformer/src/: config.rs  error.rs  main.rs  mqtt.rs  server.rs
examples/dfbja7_transformer/src/model/: gqb200a7u.rs  mod.rs  nano4sp.rs
examples/dfbja7_transformer/src/mqtt/: client.rs  mod.rs
examples/dfbja7_transformer/src/protocol/: base.rs  decoder.rs  gqb200a7u.rs  mod.rs  nano4sp.rs
examples/dfbja7_transformer/src/server/: mod.rs  tcp.rs
examples/dfbja7_transformer/src/util/: convert.rs  crc32.rs  ieee754.rs  mod.rs
examples/gb28181_admin/: Cargo.toml
examples/gb28181_admin/config/: config.toml
examples/gb28181_admin/src/: api_register.rs  dto.rs  main.rs
examples/gb28181_admin/src/api/: admin.rs  alarm.rs  audit.rs  auth.rs  broadcast.rs  devices.rs  group.rs  mod.rs  playback.rs  sessions.rs  sse.rs
examples/gb28181_admin/src/models/: alarm.rs  audit_log.rs  device.rs  device_group.rs  device_group_member.rs  mod.rs  register_audit.rs  session.rs  user.rs
examples/gb28181_admin/ui/: index.html  package-lock.json  package.json  vite.config.js
examples/gb28181_admin/ui/src/: App.vue  style.css
examples/gb_cams/: Cargo.toml
examples/gb_cams/config/: gb_cams.toml
examples/gb_cams/src/: config.rs  dto.rs  generator.rs  main.rs
examples/gb_cams/src/api/: devices.rs  events.rs  mod.rs
examples/gb_cams/src/device/: handler_impl.rs  manager.rs  (+3 more)
examples/gb_cams/ui/: index.html  package-lock.json  package.json  vite.config.js
examples/tx_admin/admin_api/: Cargo.toml
examples/tx_admin/admin_app/: Cargo.toml
examples/tx_admin/admin_domain/: Cargo.toml
examples/tx_di_meeting/: Cargo.toml
examples/tx_di_meeting/src/: main.rs
plugins/tx_di_axum/: Cargo.toml  README.md
plugins/tx_di_axum/src/: comp.rs  config.rs  e.rs  err.rs  lib.rs  r.rs
plugins/tx_di_cache/: Cargo.toml  README.md
plugins/tx_di_cache/src/: config.rs  err.rs  lib.rs  memory.rs  redis.rs  service.rs
plugins/tx_di_can/: Cargo.toml  REQUIREMENTS.md
plugins/tx_di_can/app/: .gitignore  README.md  index.html  package-lock.json  vite.config.ts
plugins/tx_di_can/src/: adapter.rs  config.rs  dbc.rs  err.rs  event.rs  flash.rs  frame.rs  hex.rs  isotp.rs  lib.rs  plugin.rs  tests.rs  uds.rs
plugins/tx_di_file/: Cargo.toml  README.md
plugins/tx_di_file/src/: config.rs  error.rs  lib.rs  plugin.rs
plugins/tx_di_gb28181/: AI_OVERVIEW.md  Cargo.toml  README.md
plugins/tx_di_gb28181/src/: auth.rs  cascade.rs  config.rs  crypto.rs  device_registry.rs  err.rs  event.rs  handlers.rs  lib.rs  plugin.rs  plugin_tail.rs  sdp.rs  xml.rs  zlm.rs
plugins/tx_di_gb28181_client/: Cargo.toml
plugins/tx_di_gb28181_client/src/: channel.rs  client_plugin.rs  config.rs  device_event.rs  device_handlers.rs  lib.rs
plugins/tx_di_gb_dev/: Cargo.toml  README.md
plugins/tx_di_gb_dev/src/: config.rs  handler.rs  invite.rs  lib.rs  plugin.rs  register.rs
plugins/tx_di_job/: Cargo.toml  README.md
plugins/tx_di_job/src/: comp.rs  config.rs  err.rs  lib.rs  models.rs  repository.rs
plugins/tx_di_log/: Cargo.toml  readme.md
plugins/tx_di_log/src/: comp.rs  config.rs  lib.rs
plugins/tx_di_registry/: Cargo.toml  README.md
plugins/tx_di_registry/src/: config.rs  config_watcher.rs  dynamic_config.rs  endpoints.rs  lib.rs  model.rs  plugin.rs  traits.rs
plugins/tx_di_sa_token/: Cargo.toml  README.md
plugins/tx_di_sa_token/src/: config.rs  lib.rs  plugin.rs
plugins/tx_di_sip/: AI_OVERVIEW.md  Cargo.toml  README.md
plugins/tx_di_sip/src/: auth.rs  client.rs  comp.rs  config.rs  dialog.rs  err.rs  handler.rs  lib.rs  metrics.rs  middleware.rs  sender.rs  sip_context.rs  sip_tx.rs
plugins/tx_di_toasty/: Cargo.toml  README.md
plugins/tx_di_toasty/src/: config.rs  err.rs  lib.rs  plugin.rs
tx-di-core/: Cargo.toml  README.md
tx-di-core/benches/: di_bench.rs
tx-di-core/docs/: ASYNC_METHOD_MACRO.md
tx-di-core/src/: aop.rs  component.rs  config.rs  error.rs  lib.rs  lifecycle.rs  registry.rs  scope.rs  store.rs  topology.rs
tx-di-core/src/di/: mod.rs
tx-di-core/tests/: test_component.rs
tx-di-macros/: Cargo.toml  README.md
tx-di-macros/src/: code_msg.rs  comp.rs  intercept_macro.rs  lib.rs  name_utils.rs  type_utils.rs  utils.rs
tx-di-macros/src/attr/: comp_attr.rs  field_attr.rs  mod.rs
tx-di-macros/src/classify/: fields.rs  mod.rs
tx-di-macros/src/codegen/: component_impl.rs  factory.rs  inner_init.rs  intercept.rs  lifecycle.rs  meta_entry.rs  mod.rs
(+521 files in other folders)
