[workspace]
members = [
    "di-core",
    "di-macros",
    "di-example",
]
resolver = "3"

package = { version = "0.1.0",edition = "2024" }

[workspace.dependencies]
# linkme 用于跨 crate 在链接期收集静态数组切片
# 基于 ELF/Mach-O/PE 的自定义 link section，完全零运行时开销
linkme = "0.3"

# DashMap：无锁并发 HashMap，支持跨线程共享的组件注册表
dashmap = "6"
log = "0.4.29"

# syn：解析 Rust AST
syn = { version = "2", features = ["full", "extra-traits"] }
# quote：生成 TokenStream
quote = "1"
# proc-macro2：提供 Span 等工具
proc-macro2 = "1"