[workspace]
members = [
    "tx-di-core",
    "tx-di-macros",
    "di-example", "plugins/tx_di_axum", "examples/gb_cams", "plugins/tx_di_sip", "plugins/tx_di_log",
]
resolver = "3"
[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["845360351@qq.com"]
license = "MIT"
readme = "README.md"
repository = "https://gitee.com/tian_xiong/tx_di"
#description = """
#
#"""

[workspace.dependencies]
tx-di-core = { path = "tx-di-core" }
tx_di_log = { path = "plugins/tx_di_log"}
# linkme 用于跨 crate 在链接期收集静态数组切片
# 基于 ELF/Mach-O/PE 的自定义 link section，完全零运行时开销
linkme = "0.3"

# DashMap：无锁并发 HashMap，支持跨线程共享的组件注册表
dashmap = "6"

toml = "1.1"

# 时间
chrono = { version = "0.4", features = ["serde"]}

# syn：解析 Rust AST
syn = { version = "2", features = ["full", "extra-traits"] }
# quote：生成 TokenStream
quote = "1"
# proc-macro2：提供 Span 等工具
proc-macro2 = "1"
tokio = {version = "1.49",features = ["full"]}
socket2 = {version = "0.6"}
env_logger = "0.11"

# 序列化
serde = { version = "1.0", features = ["derive","serde_derive"]}
serde_json = "1.0"

rsipstack = { version = "0.5",features = ["default"]}

# 日志
time = {version = "0.3"}
log = {version = "0.4",features = ["serde"]}
tracing = {version = "0.1"}
tracing-subscriber = {version = "0.3",features = ["env-filter","local-time"]}
# 用于文件输出
tracing-appender = {version = "0.2"}

# 错误处理
thiserror = "2.0"
anyhow = "1.0"

# Web 框架
axum = {version = "0.8", features = ["macros"]}
tower = {version = "0.5", features = ["full"]}
hyper = {version =  "1.9.0",features = ["full"]}
tower-http = {version = "0.6", features = ["full"]}