[package]
name = "tx-di-core"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
[dependencies]
# linkme 用于跨 crate 在链接期收集静态数组切片
# 基于 ELF/Mach-O/PE 的自定义 link section，完全零运行时开销
linkme.workspace = true

# DashMap：无锁并发 HashMap，支持跨线程共享的组件注册表
dashmap.workspace = true
log.workspace = true
tx-di-macros = { path = "../di-macros"}