[package]
name = "tx_error"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
tx-di-macros = { path = "../../tx-di-macros" }

# 可选依赖
axum = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

[features]
default = []
axum = ["dep:axum", "dep:serde", "dep:serde_json"]
anyhow = ["dep:anyhow"]
