[package]
name = "tx_error"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tx_macros = { path = "../tx_macros",version = "0.1.0" }

# 可选依赖：axum IntoResponse 支持
axum = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[features]
default = []
axum = ["dep:axum", "dep:serde"]
