[package]
name = "tx_gb28181"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "GB28181-2022 common types, XML builders/parsers and SDP utilities"

[dependencies]
# XML 高效解析
quick-xml = { version = "0.39", features = ["serialize"] }
# 时间（用于 build_time_sync_query_xml 等函数）
chrono.workspace = true
tx-di-core.workspace = true
encoding_rs.workspace = true
# 异步运行时（用于事件广播 tokio::sync::broadcast）
tokio.workspace = true
# 错误处理（用于事件监听回调 Future 输出类型）
anyhow.workspace = true
# 日志（用于事件广播中的 tracing::warn!）
tracing.workspace = true
serde = { version = "1.0.228", features = ["derive"] }

deku.workspace = true