[package]
name = "dfbja7_transformer"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
# DI 框架
tx-di-core = { workspace = true }
tx_di_log = { path = "../../plugins/tx_di_log" }

# 异步运行时
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["codec"] }

# 字节处理
bytes = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# MQTT客户端
rumqttc = "0.24"

# 错误处理
anyhow = { workspace = true }

# 日志
tracing = { workspace = true }

# 时间
chrono = { workspace = true }
