[package]
name = "gb28181_admin"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gb28181_admin"
path = "src/main.rs"

[dependencies]
tx-di-core        = { path = "../../tx-di-core" }
tx_di_log         = { path = "../../plugins/tx_di_log" }
tx_di_axum        = { path = "../../plugins/tx_di_axum" }
tx_di_sip         = { path = "../../plugins/tx_di_sip" }
tx_di_gb28181     = { path = "../../plugins/tx_di_gb28181" }
tx_gb28181        = { path = "../../common/tx_gb28181" }

tokio.workspace     = true
axum.workspace      = true
serde.workspace     = true
serde_json.workspace = true
anyhow.workspace    = true
tracing.workspace   = true
chrono              = { workspace = true }
tokio-stream        = { workspace = true }
futures-core        = { workspace = true }
