[package]
name = "gb_cams"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gb_cams"
path = "src/main.rs"

[dependencies]
tx-di-core    = { path = "../../tx-di-core" }
tx_di_sip     = { path = "../../plugins/tx_di_sip" }
tx_di_axum    = { path = "../../plugins/tx_di_axum" }
tx_di_log     = { path = "../../plugins/tx_di_log" }
tx_di_gb28181 = { path = "../../plugins/tx_di_gb28181" }

rsipstack.workspace = true
tokio.workspace     = true
anyhow.workspace    = true
tracing.workspace   = true
serde.workspace     = true
serde_json.workspace = true
axum.workspace      = true
tokio-stream.workspace = true
futures-core.workspace = true

# 随机数
rand.workspace = true

# 并发
dashmap.workspace = true

# 图片处理
image = {workspace = true, features = ["jpeg", "png"] }

# 时间
chrono.workspace = true

# 字节处理
bytes.workspace = true

# 配置文件解析
toml.workspace = true

# 异步工具
tokio-util.workspace = true
