[package]
name = "tx_di_axum"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
tx-di-core.workspace = true
linkme.workspace = true
tx_di_log.workspace = true
axum.workspace = true
tokio.workspace = true
socket2.workspace = true
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
thiserror.workspace = true
tower.workspace = true
