[package]
name = "tx_di_axum"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true

[features]
default = ["api-doc"]
api-doc = ["dep:aide", "dep:schemars", "tx_common/api-doc"]

[dependencies]
tx_error = { workspace = true }
tx-di-core.workspace = true
linkme.workspace = true
tx_di_log.workspace = true
axum.workspace = true
tokio.workspace = true
socket2.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
thiserror.workspace = true
tower.workspace = true
tower-http.workspace = true
http.workspace = true
tokio-util.workspace = true
tx_common = { workspace = true, features = ["axum"] }
aide = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }