[package]
name = "tx_di_can"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "CAN/CANFD upper-machine plugin for tx-di framework (ISO-TP, UDS flash programming, multi-adapter)"

[features]
default = ["simbus"]
# Linux SocketCAN（使用 libc PF_CAN，无第三方依赖）
socketcan = []
# PEAK PCAN USB（FFI，Windows only）
pcan = ["dep:windows"]
# 仿真总线（无需硬件）
simbus = []

[dependencies]
tx-di-core.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
dashmap.workspace = true
chrono.workspace = true
thiserror.workspace = true

# 异步 trait（CanAdapter 统一接口）
async-trait = "0.1"

# 十六进制工具（调试/日志用）
hex = "0.4"

# TOML 解析（用于手动加载配置）
toml = "0.5"

# PCAN FFI（Windows only）：使用 windows crate 动态加载 pcanbasic.dll
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
], optional = true }

[dev-dependencies]
tokio = { version = "1.49", features = ["full", "test-util"] }
futures = "0.3"
