[package]
name = "tx_di_file"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = ["local"]
local = []
s3 = ["aws-sdk-s3", "aws-config", "aws-credential-types"]

[dependencies]
tx-di-core = { path = "../../tx-di-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
uuid = { version = "1", features = ["v4"] }
mime_guess = "2"
tokio-util = { workspace = true }

# S3 后端（可选）
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }
aws-credential-types = { version = "1", optional = true }
