[package]
name = "tx_di_file"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = ["local", "s3"]
local = ["opendal/services-fs"]
s3 = ["opendal/services-s3"]

[dependencies]
tx-di-core = { path = "../../tx-di-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tx_error = { path = "../../common/tx_error" }
async-trait = { workspace = true }
bytes = { workspace = true }
uuid = { version = "1", features = ["v4"] }
mime_guess = "2"
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

# 统一文件存储后端（OpenDAL）
opendal = { workspace = true }
