[package]
name = "tx_di_gb28181"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "GB28181 server plugin for tx-di framework (SIP registration center, catalog, playback control)"

[dependencies]
tx-di-core.workspace = true
tx_di_sip       = { path = "../tx_di_sip" }
tx_gb28181      = { path = "../../common/tx_gb28181" }

rsipstack.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
dashmap.workspace = true
chrono.workspace = true
reqwest.workspace = true
async-trait.workspace = true
rand.workspace = true

# XML 高效解析（tx_gb28181 内部使用，此处为传递依赖不再需要，但保留兼容性）
#quick-xml = { version = "0.39", features = ["serialize"] }
