[package]
name = "tx_di_job"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
description = "基于 tx_di 框架的定时任务调度插件，支持 Cron 表达式、内部函数、Shell 脚本和 Python 脚本执行"
repository.workspace = true

[features]
default = []

[dependencies]
# 核心依赖
tx-di-core.workspace = true
linkme.workspace = true

# 工作区依赖
tx_error = { workspace = true }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["full", "process"] }

# 数据库依赖
toasty = { workspace = true, features = ["serde"] }
tx_di_toasty = { path = "../tx_di_toasty" }

# 公共工具（雪花 ID 等）
tx_common.workspace = true

# Cron 表达式解析
cron.workspace = true

# 时间处理
jiff.workspace = true

# 异步 trait 支持
async-trait.workspace = true

# 无锁并发 HashMap
dashmap.workspace = true

# Tokio 工具
tokio-util = { workspace = true }
