[package]
name = "tx_di_registry"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true

[features]
default = ["nacos"]
nacos = ["dep:nacos_rust_client"]

[dependencies]
tx-di-core = { workspace = true }
tx_error = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }

# Nacos 客户端（仅 feature="nacos" 时启用）
nacos_rust_client = { version = "0.3", optional = true }
