[package]
name = "tx_di_sa_token"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true

[features]
default = ["memory"]

# 存储后端特性（互斥，只能选择一个）
## 内存存储（默认，适用于开发和测试）
memory = ["sa-token-plugin-axum/memory"]

## Redis 存储（适用于生产环境，支持分布式部署）
redis = ["sa-token-plugin-axum/redis"]

## 数据库存储（适用于需要持久化的场景）
database = ["sa-token-plugin-axum/database"]

[dependencies]
tx-di-core = { path = "../../tx-di-core" }
tx_di_axum = { path = "../tx_di_axum" }
sa-token-plugin-axum = { workspace = true, features = ["axum-08"] }
axum = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
