[package]
name = "tx_di_sip"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
tx_error = { workspace = true }
rsipstack = { workspace = true, features = ["rustls", "websocket"] }
tx-di-core.workspace = true
serde.workspace = true
tracing.workspace = true
tokio.workspace = true
anyhow.workspace = true
tokio-util = { workspace = true }
dashmap.workspace = true
futures.workspace = true
async-trait = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
toml.workspace = true

[features]
rustls = ["rsipstack/rustls"]
websocket = ["rsipstack/websocket"]
