[package]
name = "tx_di_toasty"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true

[features]
default = ["sqlite"]
sqlite = ["toasty/sqlite"]
postgresql = ["toasty/postgresql"]
mysql = ["toasty/mysql"]
dynamodb = ["toasty/dynamodb"]

[dependencies]
tx_error = { workspace = true }
tx-di-core = { path = "../../tx-di-core" }
toml = { workspace = true }
toasty = { version = "0.7", default-features = false, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
