[package]
name = "admin_api"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
tx_error          = {path = "../../../common/tx_error", features = ["axum"]}
tx-di-core        = { path = "../../../tx-di-core" }
tx_di_log         = { path = "../../../plugins/tx_di_log" }
tx_di_axum        = { path = "../../../plugins/tx_di_axum" }

toasty            = { workspace = true, features = ["sqlite", "serde", "jiff"] }
jiff = {workspace = true }
tokio.workspace     = true
axum                = { workspace = true, features = ["macros", "multipart"] }
serde.workspace     = true
serde_json.workspace = true
anyhow.workspace    = true
tracing.workspace   = true
async-trait.workspace = true
tokio-util          = { workspace = true }