[package]
name = "admin_api"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
# 项目内依赖
admin_proto  = { path = "../admin_proto" }
admin_app    = { path = "../admin_app" }
admin_domain = { path = "../admin_domain" }
admin_infra  = { path = "../admin_infra" }
tx_di_toasty = { path = "../../../plugins/tx_di_toasty" }
toasty = { version = "0.7", default-features = false, features = ["serde"] }
tx_error    = { path = "../../../common/tx_error", features = ["axum"] }
tx_common    = { path = "../../../common/crates/tx_common", features = ["axum"] }
tx-di-core  = { path = "../../../tx-di-core" }
tx_di_log   = { path = "../../../plugins/tx_di_log" }
tx_di_axum  = { path = "../../../plugins/tx_di_axum" }
tx_di_sa_token = { path = "../../../plugins/tx_di_sa_token", default-features = false, features = ["memory"] }
sa-token-core = "0.1"

# gRPC
tonic  = { workspace = true }
prost  = { workspace = true }

# HTTP
axum   = { workspace = true, features = ["macros", "multipart"] }
tower  = { workspace = true, features = ["full"] }

# 序列化
serde       = { workspace = true }
serde_json  = { workspace = true }
serde_with.workspace = true
# 异步运行时
tokio       = { workspace = true }
tokio-util  = { workspace = true }
async-trait = { workspace = true }

# 工具
anyhow  = { workspace = true }
tracing = { workspace = true }

# 系统信息采集
sysinfo = "0.33"
ringbuf = "0.5.0"
