[package]
name = "admin_app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
# readme.workspace = true
repository.workspace = true


[dependencies]
admin_domain = { path = "../admin_domain" }
admin_proto = { path = "../admin_proto" }
tx_error = { path = "../../../common/tx_error"}
tx_common = { path = "../../../common/crates/tx_common"}
tx-di-core  = { path = "../../../tx-di-core" }

async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
jiff = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
mockall = "0.13"
rstest = "0.23"
pretty_assertions = "1"
