[package]
name = "admin_app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
# readme.workspace = true
repository.workspace = true


[dependencies]
admin_domain = { path = "../admin_domain" }
admin_proto = { path = "../admin_proto" }
tx_error = { path = "../../../common/tx_error"}
tx_common = { path = "../../../common/crates/tx_common"}
tx-di-core  = { path = "../../../tx-di-core" }
tx_di_file = { path = "../../../plugins/tx_di_file" }
tx_di_job = { path = "../../../plugins/tx_di_job" }
tx_di_toasty = { path = "../../../plugins/tx_di_toasty" }
tx_di_sa_token = { path = "../../../plugins/tx_di_sa_token", default-features = false, features = ["memory"] }

async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
jiff = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["io"] }
schemars = { workspace = true }
uuid = { version = "1", features = ["v4", "v7"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
mockall = "0.13"
rstest = "0.23"
pretty_assertions = "1"
admin_infra = { path = "../admin_infra" }
toasty = { version = "0.7", features = ["sqlite"] }
tx_di_toasty = { path = "../../../plugins/tx_di_toasty", features = ["sqlite"] }
tempfile = "3"
