[package]
name = "admin_domain"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
tx_error = {path = "../../../common/tx_error"}
tx_common = {path = "../../../common/crates/tx_common"}
admin_macros = {path = "../admin_macros"}
tx-di-core = {path = "../../..//tx-di-core"}


tracing.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_repr.workspace = true
serde_json.workspace = true
jiff.workspace = true
argon2.workspace = true
rand.workspace = true
anyhow.workspace = true
schemars.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
mockall = "0.13"
rstest = "0.23"
pretty_assertions = "1"